# PSU-MDESops

./: .editorconfig  .gitignore  .gitlab-ci.yml  .isort.cfg  .mailmap  .pre-commit-config.yaml  AES_random_testing.py  DES_server_testing_script.py  README.md  build.py  build_regal.py  desops_tutorial_01.ipynb  desops_tutorial_02.ipynb  license.txt  pyproject.toml  random_DFA  romulo@mts.eecs.umich.edu  test_fixed_VE_vary_co_0.csv  test_fixed_VE_vary_co_02.csv  test_fixed_VE_vary_co_rate.csv  test_fixed_VE_vary_co_rate2.csv
DESops/: Automata.py  Event.py  __init__.py  error.py
DESops/AES/: AES.py  SynthSMV_AES.py
DESops/Automata/: Automata.py
DESops/SDA/: __init__.py  event_extensions.py
DESops/VLPPO/: VLPPO.py
DESops/automata/: DFA.py  NFA.py  PFA.py  __init__.py  automata.py  automata_ctor.py  event.py
DESops/basic/: construct_complement.py  construct_reverse.py  construct_spa.py  construct_subautomata.py  generic_functions.py  observer_comp.py  parallel_comp.py  parallel_comp_old.py  parallel_comp_old.py_  product_NFA.py  product_comp.py  refine_product.py  subautomaton.py  ureach.py
DESops/basic_operations/: composition.py  construct_complement.py  construct_reverse.py  construct_spa.py  construct_subautomata.py  cycle_detection.py  generic_functions.py  language_equivalence.py  observer_comp.py  parallel_comp.py  product_NFA.py  product_comp.py  refine_product.py  transducers.py  unary.py  ureach.py
DESops/diagnoser/: cycle_detection.py  diagnoser.py
DESops/file/: fsm_to_bdd.py  fsm_to_igraph.py  igraph_pickle.py  igraph_to_fsm.py  (+2 more)
diagnoser/: A_label.fsm.txt  diagnoser.py
docs/: Makefile
jupyter-tutorials/: desops_tutorial_01.ipynb  desops_tutorial_02.ipynb
tests/: test_AES.py  test_Automata.py  test_SDA_robust.py  test_SDA_stochcost.py  test_VLPPO.py  test_composition.py  test_desops.py  test_edisyn.py  test_edit.py  test_io.py  test_newfct.py  test_opacity.py  test_opacity_alternative.py  test_opacity_papers.py  test_opacity_supervisor.py  test_supervisor.py  test_supremal.py  test_supremal_cn.py  test_tikz.py  util.py
(+227 files in other folders)
