[tool.poetry]
name = "DESops"
version = "20.9.4"
description = ""
authors = ["Jack Weitze <jweitze@umich.edu>", "Romulo Meira Goes <r.meiragoes@gmail.com>", "Shoma Matsui <smatsui@umich.edu>", "Andrew Wintenberg <awintenb@umich.edu>"]
packages = [
    { include = "DESops" },
]

[tool.poetry.dependencies]
python = "^3.7"
python-igraph = ">= 0.9.10"
pycairo = {version="^1.19.1", optional=true}
pydash = "^4.7.6"
requests = "^2.24.0"
dd = "^0.5.6"
tqdm = "^4.46.1"
colorama = {version = "^0.4.3", platform = "windows"}

Sphinx = {version="^5.0", optional=true}
sphinx-rtd-theme = {version="^1.0.0", optional=true}
m2r2 = {version="^0.3.2", optional=true}
pyment = {version="^0.3.3", optional=true}


# Optional dependencies for opacity verification and enforcement
# Edisyn
# uncomment the next line if you have installed edisyn locally
# edisyn = {path = "../edisyn", optional = true, develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
seed-isort-config = "^2.1.0"
pre-commit = "^2.2.0"
rope = "^0.17.0"
autoflake = "^1.3.1"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
caching = ["pycairo"]
opacity_enf = ["edisyn"]
docs = ["Sphinx", "sphinx-rtd-theme", "pyment", "m2r2"]
